--- a/baseline_trials/Reminder.html
+++ b/baseline_trials/Reminder.html
@@ -14,7 +14,7 @@
     <div class="reminder">
 
         <p style="text-align: center; ">
-            <b>Reminder</b>
+            <b> Instructions reminder</b>
         </p>
 
         {% if page_name == "ComprehensionQuestionPage" %}
@@ -47,8 +47,8 @@
                 </p>
                 <p>
                     Person A and Person B both receive 4 points in Stage 2.
-                    Only Person B can use these points to remove points from Person A.
-                    Removed points are eliminated and cannot be used by anyone.
+<!--                    Only Person B can use these points to remove points from Person A.-->
+                    Points removed by Person B are eliminated.
                     For each <b>1 point</b> that Person B removes from Person A, Person B loses <b>0.33 points</b>.
                 </p>
             </div>
@@ -61,7 +61,7 @@
                 </p>
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to remove points.
-                    Removed points are eliminated and cannot be used by anyone.
+                    Points removed by Person C are eliminated.
                     For each <b>1 point</b> that Person C removes from Person A, Person C loses <b>0.33 points</b>.
             </div>
         {% endif %}
@@ -87,7 +87,7 @@
                 </p>
                 <p>
                     Person C receives 4 points in Stage 2 and can use these points to remove or give points.
-                    Removed points are eliminated and cannot be used by anyone.
+                    Points removed by Person C are eliminated.
                     For each <b>1 point</b> that Person C removes from Person A, Person C loses <b>0.33 points</b>.
                     For each <b>1 point</b> that Person C gives to Person B, Person C loses <b>0.33 points</b>.
                 </p>
