--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1174,8 +1174,8 @@
 
 
             <p style="text-align: center;">
-                Person A gave <b> {{TP_norm_decision.receiver }} point(s)</b> to Person B
-                and kept <b> {{TP_norm_decision.dictator_keeps }} point(s)</b> for themselves.
+                Person A gave <b> {{TP_norm_decision.receiver }} points</b> to Person B
+                and kept <b> {{TP_norm_decision.dictator_keeps }} points</b> for themselves.
             </p>
 
             <p style="text-align: center;">
@@ -1398,7 +1398,7 @@
                     </p>
                 {% endif %}
 
-                <p style="text-align: center; "> Person A gave <b> {{TP_decision.receiver }} point(s)</b> to {{treatment_text_action_person2}} and kept <b> {{TP_decision.dictator_keeps }} point(s) </b> for themselves. </p>
+                <p style="text-align: center; "> Person A gave <b> {{TP_decision.receiver }} points</b> to {{treatment_text_action_person2}} and kept <b> {{TP_decision.dictator_keeps }} points </b> for themselves. </p>
 
                 <div class='numbers'>
                     <p style="text-align: center; ">  <strong>As {{treatment_text_action_person}}, how many points do you <b style="color: red;"> {{ treatment_text_action }} {{ treatment_text_receiver }} </b> ? </strong> </p>
@@ -1426,7 +1426,7 @@
                 </div>
 
             <div data-index="{{ TP_decision.index }}">
-                <p style="text-align: center; "> This costs you <span class="TP-cost-display" data-index="{{ TP_decision.index }}"></span> point(s).
+                <p style="text-align: center; "> This costs you <span class="TP-cost-display" data-index="{{ TP_decision.index }}"></span> points.
                 </p>
             </div>
 
